--- a/Scarb.toml
+++ b/Scarb.toml
@@ -10,7 +10,7 @@ starknet = "2.11.4"
 openzeppelin = {git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v1.0.0" }
 
 [dev-dependencies]
-snforge_std = "0.41.0"
+snforge_std = "0.43.1"
 assert_macros = "2.11.4"
 
 [[target.starknet-contract]]
@@ -21,6 +21,11 @@ test = "snforge test"
 
 [tool.scarb]
 allow-prebuilt-plugins = ["snforge_std"]
+
+[[tool.snforge.fork]]
+name = "SEPOLIA_LATEST"
+url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8"
+block_id.tag = "latest"
 
 # Visit https://foundry-rs.github.io/starknet-foundry/appendix/scarb-toml.html for more information
 
